# eink-camera

./: .gitignore  CLAUDE.md  Makefile  camera.c  dcam  dream  dream-camera.service  dream_camera.py  eink.py  example_simple.py  gallery.py  it8951_usb.c  it8951_usb.h  plan.md  pyproject.toml  requirements.txt  runner.py  ui.py
case/: enclosure.py  enclosure_print.html  enclosure_print.py  enclosure_v1.py
dreamcam/: __init__.py  __main__.py  app.py  gallery.py  input.py  styles.py  transform.py  ui.py
dreamcam/display/: __init__.py  sim.py  usb.py
dreamcam/web/: __init__.py  bridge.py  proxy.py  server.py
dreamcam/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_app.py  test_display.py  test_gallery.py  test_input.py  test_styles.py  test_transform.py  test_web_bridge.py  test_web_proxy.py  test_web_server.py
